<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5C4BC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="412dp"
        android:layout_height="286dp"
        android:layout_marginBottom="1dp"
        android:background="#FDF9F9"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnclear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnclear"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_clear"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="clearAll"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btnbrc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnbrc"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_brackets"
        android:textColor="#070707"
        android:textSize="30sp"

        app:layout_constraintEnd_toStartOf="@+id/btnmod"
        app:layout_constraintStart_toEndOf="@+id/btnclear"
        app:layout_constraintTop_toTopOf="@+id/btnclear" />

    <Button
        android:id="@+id/btnmod"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_mod"
        android:textColor="#070707"
        android:textSize="30sp"

        app:layout_constraintEnd_toStartOf="@+id/btndiv"
        app:layout_constraintStart_toEndOf="@+id/btnbrc"
        app:layout_constraintTop_toTopOf="@+id/btnbrc" />

    <Button
        android:id="@+id/btndiv"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_div"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnmod"
        app:layout_constraintTop_toTopOf="@+id/btnmod" />

    <Button
        android:id="@+id/btnmin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_sub"
        android:textColor="#070707"
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="write"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn6" />

    <Button
        android:id="@+id/btn6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_6"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btnmin"
        app:layout_constraintStart_toEndOf="@+id/btn5" />

    <Button
        android:id="@+id/btn5"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_5"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn4" />

    <Button
        android:id="@+id/btn4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_4"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btnadd"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_sum"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBottom_toBottomOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toTopOf="@+id/btn9" />

    <Button
        android:id="@+id/btn8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_8"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBottom_toBottomOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_9"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBottom_toBottomOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btnadd"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <Button
        android:id="@+id/btn7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_7"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnclear" />

    <Button
        android:id="@+id/btn1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_1"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBottom_toTopOf="@+id/btnequal"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_2"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_3"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btnmul"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btnmul"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_mul"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn3" />

    <Button
        android:id="@+id/btndot"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_dot"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn0"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_0"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="write"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnclr"
        app:layout_constraintEnd_toStartOf="@+id/btnclr"
        app:layout_constraintStart_toEndOf="@+id/btndot" />

    <Button
        android:id="@+id/btnclr"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#C5C4BC"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_clearone"
        android:textColor="#070707"
        android:textSize="16sp"
        android:onClick="clearOne"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnequal"
        app:layout_constraintEnd_toStartOf="@+id/btnequal"
        app:layout_constraintStart_toEndOf="@+id/btn0" />

    <Button
        android:id="@+id/btnequal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/orange"
        android:shadowColor="#C5C4BC"
        android:text="@string/btn_equal"
        android:textColor="#070707"
        android:textSize="30sp"
        android:onClick="evaluate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnclr"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

</androidx.constraintlayout.widget.ConstraintLayout>